tests/ui/fail/skip_after_skip_remaining.stderr
error: Attribute #[skip] is not allowed after a #[skip_remaining] attribute declaration
  --> tests/ui/fail/skip_after_skip_remaining.rs:12:5
   |
12 |     #[skip]
   |     ^^^^^^^

error: Attribute #[skip] is not allowed after a #[skip_remaining] attribute declaration
  --> tests/ui/fail/skip_after_skip_remaining.rs:16:5
   |
16 |     #[skip]
   |     ^^^^^^^

error: Attribute #[skip] is not allowed after a #[skip_remaining] attribute declaration
  --> tests/ui/fail/skip_after_skip_remaining.rs:21:57
   |
21 | struct Unnamed(#[skip_remaining] ImplDeviceDestroyable, #[skip] String);
   |                                                         ^^^^^^^
